--- a/app/index.html
+++ b/app/index.html
@@ -29,26 +29,24 @@
 					</li>
 				</ul>
 			</div>
-			<div class="menu-menu-container">
-				<ul class="menu-game">
-					<li class="menu-item">
-						<a href="#">Игра</a>
-						<ul class="sub-menu">
-							<li class="menu-item">
-								<a href="#">Начать заново</a>
-							</li>
-							<li class="menu-item">
-								<a href="#">Маркетплейс</a>
-							</li>
-						</ul>
+			<div class="menu-game">
+				<div class="menu-game__title">
+					Игра
+				</div>
+				<ul class="menu-game__items">
+					<li class="menu-game__item">
+						<a href="#">Начать заново</a>
+					</li>
+					<li class="menu-game__item">
+						<a href="#">Маркетплейс</a>
 					</li>
 				</ul>
 			</div>
-			<div class="navigation__links">
-				<a href="#" class="navigation__link">
+			<div class="navigation__links stores">
+				<a href="#" class="stores__link">
 					<img src="images/dist/google-play.png" alt="google-play" />
 				</a>
-				<a href="#" class="navigation__link">
+				<a href="#" class="stores__link">
 					<img src="images/dist/app-store.png" alt="app-store" />
 				</a>
 			</div>
