--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,7 @@
 				</ul>
 			</div>
 			<div class="menu-game">
-				<div class="menu-game__title">
-					Игра
-				</div>
+				<div class="menu-game__title">Игра</div>
 				<ul class="menu-game__items">
 					<li class="menu-game__item">
 						<a href="#">Начать заново</a>
@@ -52,8 +50,49 @@
 			</div>
 		</nav>
 		<div class="header__left">
-			<div class="header__left--game game bg-grey">game</div>
-			<div class="message bg-grey">message</div>
+			<div class="header__left-game game bg-grey">
+				<div class="game__body">
+
+
+					<div class="game__settings settings">
+
+						<div class="settings__progress progress-block">
+							<div class="progress-block__title">
+								<div class="progress-block__title-name">
+									Леонид
+								</div>
+								<div class="progress-block__title-category">
+									 — предприниматель
+								</div>
+							</div>
+							<div class="progress-block__body">
+								<div class="progress-block__track">
+									<span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+								</div>
+								<div class="progress-block__value"><span>1</span>ур.</div>
+							</div>
+						</div>
+
+						<div class="game__settings-panel panel-settings">
+awd
+						</div>
+
+					</div>
+				</div>
+			</div>
+			<div class="message bg-grey">
+				<div class="message__body">
+					<div class="message__content contact--us">
+						<p>
+							Если вы готовы связаться с нами без прилюдий и изучения наших
+							возможностей, сделайте это <span>прямо сейчас!</span>
+						</p>
+						<div class="message__buttons">
+							<button class="message__buttons button">Связаться с нами</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<div class="header__right">
