--- a/app/index.html
+++ b/app/index.html
@@ -52,31 +52,168 @@
 		<div class="header__left">
 			<div class="header__left-game game bg-grey">
 				<div class="game__body">
-
-
 					<div class="game__settings settings">
-
-						<div class="settings__progress progress-block">
+						<div class="settings__progress progress-block progress-full">
 							<div class="progress-block__title">
-								<div class="progress-block__title-name">
-									Леонид
-								</div>
+								<div class="progress-block__title-name">Леонид</div>
 								<div class="progress-block__title-category">
-									 — предприниматель
+									— предприниматель
 								</div>
 							</div>
 							<div class="progress-block__body">
 								<div class="progress-block__track">
-									<span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span class="_active"></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+									<span class="_active"></span><span class="_active"></span
+									><span class="_active"></span><span class="_active"></span
+									><span class="_active"></span><span class="_active"></span
+									><span class="_active"></span><span class="_active"></span
+									><span></span><span></span><span></span><span></span
+									><span></span><span></span><span></span><span></span
+									><span></span><span></span><span></span><span></span
+									><span></span><span></span><span></span><span></span
+									><span></span><span></span><span></span><span></span
+									><span></span><span></span><span></span><span></span
+									><span></span><span></span><span></span><span></span
+									><span></span>
 								</div>
 								<div class="progress-block__value"><span>1</span>ур.</div>
 							</div>
 						</div>
 
 						<div class="game__settings-panel panel-settings">
-awd
-						</div>
+							<div class="panel-settings__tracks">
+								<div class="panel-settings__bonuses">
+									<div class="panel-settings__bonus bonus-block">
+										<span>25</span>
+									</div>
+									<div class="panel-settings__bonus bonus-block">
+										<span>24</span>
+									</div>
+									<div class="panel-settings__bonus bonus-block">
+										<span>100</span>k
+									</div>
+									
+								</div>
 
+								<div class="panel-settings__progress progress-block">
+									<div class="progress-block__title">
+										<div class="progress-block__title-category">
+											Предприимчивость
+										</div>
+									</div>
+									<div class="progress-block__body">
+										<div class="progress-block__track">
+											<span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span></span><span></span><span></span><span></span
+											><span></span><span></span><span></span>
+										</div>
+										<div class="progress-block__value"><span>1</span></div>
+									</div>
+								</div>
+								<div class="panel-settings__progress progress-block">
+									<div class="progress-block__title">
+										<div class="progress-block__title-category">
+											Познавательность
+										</div>
+									</div>
+									<div class="progress-block__body">
+										<div class="progress-block__track">
+											<span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span><span></span><span></span
+											><span></span><span></span><span></span>
+										</div>
+										<div class="progress-block__value"><span>2</span></div>
+									</div>
+								</div>
+								<div class="panel-settings__progress progress-block">
+									<div class="progress-block__title">
+										<div class="progress-block__title-category">
+											Пунктуальность
+										</div>
+									</div>
+									<div class="progress-block__body">
+										<div class="progress-block__track">
+											<span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span></span><span></span><span></span><span></span
+											><span></span><span></span><span></span>
+										</div>
+										<div class="progress-block__value"><span>1</span></div>
+									</div>
+								</div>
+								<div class="panel-settings__progress progress-block">
+									<div class="progress-block__title">
+										<div class="progress-block__title-category">Лояльность</div>
+									</div>
+									<div class="progress-block__body">
+										<div class="progress-block__track">
+											<span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span></span><span></span
+											><span></span><span></span><span></span><span></span
+											><span></span><span></span><span></span>
+										</div>
+										<div class="progress-block__value"><span>1</span></div>
+									</div>
+								</div>
+								<div class="panel-settings__progress progress-block">
+									<div class="progress-block__title">
+										<div class="progress-block__title-category">
+											Коммуникабельность
+										</div>
+									</div>
+									<div class="progress-block__body">
+										<div class="progress-block__track">
+											<span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span><span class="_active"></span><span></span
+											><span></span><span></span><span></span>
+										</div>
+										<div class="progress-block__value"><span>1</span></div>
+									</div>
+								</div>
+								<div class="panel-settings__progress progress-block">
+									<div class="progress-block__title">
+										<div class="progress-block__title-category">
+											Элегентность
+										</div>
+									</div>
+									<div class="progress-block__body">
+										<div class="progress-block__track">
+											<span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span class="_active"></span
+											><span class="_active"></span><span></span><span></span><span></span
+											><span></span><span></span><span></span>
+										</div>
+										<div class="progress-block__value"><span>1</span></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="panel-settings__photo">
+								<img src="images/dist/gamer.png" alt="" />
+							</div>
+							<div class="panel-settings__icons">
+								<div class="panel-settings__icon"></div>
+								<div class="panel-settings__icon  _active"></div>
+								<div class="panel-settings__icon"></div>
+								<div class="panel-settings__icon"></div>
+								<div class="panel-settings__icon"></div>
+								<div class="panel-settings__icon"></div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
