--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
 					</ul>
 				</div>
 				<div class="menu-game">
-					<div data-menu="game" class="menu-game__title icon-game">Игра</div>
+					<div class="menu-game__title icon-game">Игра</div>
 					<ul class="menu-game__items">
 						<li data-menu="restart" class="menu-game__item">
 							<a href="#">Начать заново</a>
@@ -55,16 +55,18 @@
 			</nav>
 		</div>
 
-		<div class="header__left bg-grey">
-			<div class="header__left-game game">
-				<div class="game__body"></div>
-			</div>
-			<div class="message bg-grey">
-				<div class="message__body"></div>
+		<div class="game-navigation bg-grey">
+			<div class="game-navigation__container">
+				<div class="game">
+					<div class="game__body"></div>
+				</div>
+				<div class="message bg-grey">
+					<div class="message__body"></div>
+				</div>
 			</div>
 		</div>
 
-		<div class="header__right">
+		<div class="header__content">
 			<div class="settings-panel-left bg-grey">
 				<div class="settings-panel-left__bonus"></div>
 				<div class="panel-settings__icons">
@@ -76,7 +78,7 @@
 					<div class="panel-settings__icon"></div>
 				</div>
 			</div>
-			<div class="header__right-top">
+			<div class="header__top">
 				<div id="settings-burger" class="svg-burger left">
 					<svg
 						class="svg"
@@ -98,7 +100,7 @@
 						/>
 					</svg>
 				</div>
-				<div class="header__right-top-banner banner bg-grey">
+				<div class="header__content-top-banner banner bg-grey">
 					<p>
 						27.09.2022 года, компания ТАДАИМАТЕК приглашает на технологичесукю
 						конференцию, на которой Вы познакомитесь
